--- a/Style.css
+++ b/Style.css
@@ -107,7 +107,7 @@ h1, h2 {
     display: flex;
     flex-direction: column;
     width: 100%;
-    box-sizing: ;
+    box-sizing: content-box;
 }
 
 .swiper-slide h3 {
