--- a/Style.css
+++ b/Style.css
@@ -107,7 +107,7 @@ h1, h2 {
     display: flex;
     flex-direction: column;
     width: 100%;
-    box-sizing: content-box;
+    box-sizing: border-box;
 }
 
 .swiper-slide h3 {
@@ -131,7 +131,6 @@ h1, h2 {
 .swiper-button-next,
 .swiper-button-prev {
     color: #333; /* Keep the arrows visible, adjust as needed */
-    color: transparent; /* Keep the arrows visible, adjust as needed */
     background-color: transparent; /* Ensure no background color */
     border: none; /* Remove any borders */
     font-size: 16px; /* Reduce the font size of the arrows */
