--- a/Style.css
+++ b/Style.css
@@ -1,6 +1,6 @@
 /* General Styles */
 body {
-    text-align: justify; /* remove this if it doesn't look good */
+    text-align: center; /* remove this if it doesn't look good */
     font-family: "roboto-flex", serif;
     margin: 0;
     padding: 0;
@@ -74,10 +74,11 @@ h1, h2 {
 
 /* About Me Image */
 .about-pic {
+    flex: 1;
     float: right; /* Align image to the right */
     width: 200px; /* Set a fixed width */
     height: auto; /* Maintain aspect ratio */
-    margin: 0 0 10px 10px; /* Add spacing around the image, change this back to 20px if changes don't look good */
+    margin-left: 10px; /* Add spacing around the image, change this back to 20px if changes don't look good */
     /* border-radius: 8px; /* Optional: Rounded corners */
     object-fit: cover; /* Ensure the image is cropped appropriately */
     /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Optional: Add a shadow */
