--- a/Style.css
+++ b/Style.css
@@ -49,7 +49,7 @@ header {
 section {
     margin: 40px 0; /* Add space between sections */
     padding: 20px;
-    max-width: 1200px; /* Limit width for better readability */
+    max-width: 1000px; /* Limit width for better readability */
     text-align: center; /* Center-align the content */
 }
 
@@ -65,7 +65,7 @@ h1, h2 {
 #about {
     margin: 40px auto; /* Add space above and below the section */
     padding: 20px; /* Internal padding */
-    max-width: 800px; /* Restrict width for readability */
+    max-width: 1000px; /* Restrict width for readability */
     text-align: left; /* Align text to the left */
     font-family: Arial, sans-serif; /* Set a readable font */
     color: #000000; /* Black text for readability */
@@ -92,11 +92,12 @@ h1, h2 {
 }
 
 #Quotes {
+    max-width: 1000px;
     font-size: 1.2rem; /* Adjust the size for better readability */
     color: #333; /* Set the text color */
     text-align: center; /* Center-align the quotes in the section */
-    margin-right: 10px;
-    padding-right: 5px;
+    margin: 10px;
+    padding: 10px;
 }
 
 /* Style for the Blockquote */
@@ -111,7 +112,7 @@ h1, h2 {
 /* 2. Projects Carousel */
 .swiper {
     width: 100%; /* Full width of container */
-    max-width: 800px; /* Limit max width */
+    max-width: 1000px; /* Limit max width */
     margin: 20px auto; /* Center carousel */
     overflow: hidden; /* Prevent overflow issues */
     padding: 20px 0; /* Padding for visual space */
