--- a/Style.css
+++ b/Style.css
@@ -74,7 +74,7 @@ h1, h2 {
 
 /* About Me Image */
 .about-pic {
-    float: center; /* Align image to the right -- revery if you don't like positioning */
+    float: left; /* Align image to the right -- revery if you don't like positioning */
     width: 200px; /* Set a fixed width */
     height: auto; /* Maintain aspect ratio */
     margin-right: 5px; /* Add spacing around the image, change this back to 20px if changes don't look good */
