--- a/Style.css
+++ b/Style.css
@@ -119,10 +119,10 @@ h1, h2 {
 }
 
 .swiper-slide {
-    text-align: center;
+    text-align: left;
     padding: 10px; /* Reduce padding for tighter spacing */
     line-height: 1.4; /* Adjust line spacing for better readability */
-    background-color: #fff;
+    background-color: #ffffff;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     /* display: flex; reassign this if webpage looks different */ 
