--- a/Style.css
+++ b/Style.css
@@ -49,7 +49,7 @@ header {
 section {
     margin: 40px 0; /* Add space between sections */
     padding: 20px;
-    max-width: 1000px; /* Limit width for better readability */
+    max-width: 800px; /* Limit width for better readability */
     text-align: center; /* Center-align the content */
 }
 
@@ -92,7 +92,7 @@ h1, h2 {
 }
 
 #Quotes {
-    max-width: 1000px;
+    max-width: 800px;
     font-size: 1.2rem; /* Adjust the size for better readability */
     color: #333; /* Set the text color */
     text-align: center; /* Center-align the quotes in the section */
@@ -307,7 +307,7 @@ h1, h2 {
 /* Mobile Responsiveness  and Settings to change for Mobile compatability */
 @media (max-width: 768px) {
     .navbar ul {
-        flex-direction: column;
+        flex-direction: block;
         gap: 10px;
     }
 
