--- a/Style.css
+++ b/Style.css
@@ -314,7 +314,7 @@ form textarea {
 /* Contact Photo */
 .contact-photo {
     flex: 1; /* Take up less space than the form */
-    /* max-width: 300px; /* Restrict maximum width */
+    max-width: 300px; /* Restrict maximum width */
     width: 200px; /* Ensure image scales proportionally */
     height: 300px; /* Maintain aspect ratio */
     border-radius: 50%; /* Rounded corners */
