--- a/Style.css
+++ b/Style.css
@@ -283,7 +283,7 @@ form textarea {
     font-size: 1rem;
     border: 1px solid #ccc; /* Subtle border */
     border-radius: 5px; /* Rounded corners */
-    /* box-sizing: border-box; /* Include padding in width calculation */
+    box-sizing: border-box; /* Include padding in width calculation */
     background-color: transparent;
 }
 
